// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots HKBarChart default 1`] = `
<div
  className="flex"
>
  <div
    className="flex-auto"
  >
    <svg
      className="br0 ba b--silver"
      height={300}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      preserveAspectRatio="none"
      viewBox="0 0 100 300"
      width={100}
    >
      <g
        className="dim"
      >
        <rect
          className="dim"
          fill="#CFD7E6"
          height={45}
          width={4.472774416594641}
          x={0.38893690579083895}
          y={255}
        />
        <rect
          className="dim"
          fill="#CCC2DC"
          height={285}
          width={4.472774416594641}
          x={5.250648228176318}
          y={15}
        />
      </g>
      <g
        className="dim"
      >
        <rect
          className="dim"
          fill="#CFD7E6"
          height={48}
          width={4.472774416594641}
          x={11.624891961970613}
          y={252}
        />
        <rect
          className="dim"
          fill="#CCC2DC"
          height={285}
          width={4.472774416594641}
          x={16.486603284356093}
          y={15}
        />
      </g>
      <g
        className="dim"
      >
        <rect
          className="dim"
          fill="#CFD7E6"
          height={50}
          width={4.472774416594641}
          x={22.860847018150388}
          y={250}
        />
        <rect
          className="dim"
          fill="#CCC2DC"
          height={285}
          width={4.472774416594641}
          x={27.722558340535866}
          y={15}
        />
      </g>
      <g
        className="dim"
      >
        <rect
          className="dim"
          fill="#CFD7E6"
          height={52}
          width={4.472774416594641}
          x={34.09680207433016}
          y={248}
        />
        <rect
          className="dim"
          fill="#CCC2DC"
          height={285}
          width={4.472774416594641}
          x={38.95851339671564}
          y={15}
        />
      </g>
      <g
        className="dim"
      >
        <rect
          className="dim"
          fill="#CFD7E6"
          height={52}
          width={4.472774416594641}
          x={45.33275713050993}
          y={248}
        />
        <rect
          className="dim"
          fill="#CCC2DC"
          height={285}
          width={4.472774416594641}
          x={50.194468452895414}
          y={15}
        />
      </g>
      <g
        className="dim"
      >
        <rect
          className="dim"
          fill="#CFD7E6"
          height={52}
          width={4.472774416594641}
          x={56.56871218668971}
          y={248}
        />
        <rect
          className="dim"
          fill="#CCC2DC"
          height={216}
          width={4.472774416594641}
          x={61.43042350907519}
          y={84}
        />
      </g>
      <g
        className="dim"
      >
        <rect
          className="dim"
          fill="#CFD7E6"
          height={52}
          width={4.472774416594641}
          x={67.80466724286948}
          y={248}
        />
        <rect
          className="dim"
          fill="#CCC2DC"
          height={285}
          width={4.472774416594641}
          x={72.66637856525496}
          y={15}
        />
      </g>
      <g
        className="dim"
      >
        <rect
          className="dim"
          fill="#CFD7E6"
          height={54}
          width={4.472774416594641}
          x={79.04062229904926}
          y={246}
        />
        <rect
          className="dim"
          fill="#CCC2DC"
          height={285}
          width={4.472774416594641}
          x={83.90233362143474}
          y={15}
        />
      </g>
      <g
        className="dim"
      >
        <rect
          className="dim"
          fill="#CFD7E6"
          height={55}
          width={4.472774416594641}
          x={90.27657735522904}
          y={245}
        />
        <rect
          className="dim"
          fill="#CCC2DC"
          height={255}
          width={4.472774416594641}
          x={95.13828867761451}
          y={45}
        />
      </g>
    </svg>
  </div>
  <div
    className="w6"
  >
    <a
      className="cursor-hand"
      onClick={[Function]}
    >
      <div
        className="hk-label flex flex-row br2 pa2 mh2 items-center bg-lightest-silver"
      >
        <div
          className="flex items-center"
        >
          <svg
            className="malibu-fill-gradient-dark-gray icon malibu-icon h1 w1 mr1 fill-dark-gray di"
            style={undefined}
          >
            <use
              xlinkHref="#confirm-16"
            />
          </svg>
          <svg
            className="mr1"
            height="31"
            viewBox="0 0 7 31"
            width="7"
          >
            <rect
              fill="#CFD7E6"
              fillOpacity={1}
              height="100%"
              width="7"
              x="0"
              y="0"
            />
          </svg>
        </div>
        <div
          className="items-center"
        >
          <span
            className="db ma1 ttu f7 tracked"
          >
            apples
          </span>
          <span
            className="db ma1 ttu b f6"
          >
            242152
          </span>
        </div>
      </div>
    </a>
    <a
      className="cursor-hand"
      onClick={[Function]}
    >
      <div
        className="hk-label flex flex-row br2 pa2 mh2 items-center bg-lightest-silver"
      >
        <div
          className="flex items-center"
        >
          <svg
            className="malibu-fill-gradient-dark-gray icon malibu-icon h1 w1 mr1 fill-dark-gray di"
            style={undefined}
          >
            <use
              xlinkHref="#confirm-16"
            />
          </svg>
          <svg
            className="mr1"
            height="31"
            viewBox="0 0 7 31"
            width="7"
          >
            <rect
              fill="#CCC2DC"
              fillOpacity={1}
              height="100%"
              width="7"
              x="0"
              y="0"
            />
          </svg>
        </div>
        <div
          className="items-center"
        >
          <span
            className="db ma1 ttu f7 tracked"
          >
            oranges
          </span>
          <span
            className="db ma1 ttu b f6"
          >
            1245496
          </span>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`Storyshots HKButton with custom title 1`] = `
<button
  className="hk-button--secondary"
  disabled={false}
  onClick={[Function]}
  title="a custom title"
  type="button"
  value="a custom title"
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton with custom value 1`] = `
<button
  className="hk-button--secondary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value="a custom value"
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/danger regular-disabled-async 1`] = `
<button
  className="hk-button--async"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/danger regular-disabled-normal 1`] = `
<button
  className="hk-button--disabled-danger"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/danger regular-enabled-normal 1`] = `
<button
  className="hk-button--danger"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/danger small-disabled-normal 1`] = `
<button
  className="hk-button-sm--disabled-danger"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/danger small-enabled-normal 1`] = `
<button
  className="hk-button-sm--danger"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/info regular-disabled-async 1`] = `
<button
  className="hk-button--async"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/info regular-disabled-normal 1`] = `
<button
  className="hk-button--disabled-info"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/info regular-enabled-normal 1`] = `
<button
  className="hk-button--info"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/info small-disabled-normal 1`] = `
<button
  className="hk-button-sm--disabled-info"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/info small-enabled-normal 1`] = `
<button
  className="hk-button-sm--info"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/primary regular-disabled-async 1`] = `
<button
  className="hk-button--async"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/primary regular-disabled-normal 1`] = `
<button
  className="hk-button--disabled-primary"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/primary regular-enabled-normal 1`] = `
<button
  className="hk-button--primary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/primary small-disabled-normal 1`] = `
<button
  className="hk-button-sm--disabled-primary"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/primary small-enabled-normal 1`] = `
<button
  className="hk-button-sm--primary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/secondary regular-disabled-async 1`] = `
<button
  className="hk-button--async"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/secondary regular-disabled-normal 1`] = `
<button
  className="hk-button--disabled-secondary"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/secondary regular-enabled-normal 1`] = `
<button
  className="hk-button--secondary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/secondary small-disabled-normal 1`] = `
<button
  className="hk-button-sm--disabled-secondary"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/secondary small-enabled-normal 1`] = `
<button
  className="hk-button-sm--secondary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/tertiary regular-disabled-async 1`] = `
<button
  className="hk-button--async"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/tertiary regular-disabled-normal 1`] = `
<button
  className="hk-button--disabled-tertiary"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/tertiary regular-enabled-normal 1`] = `
<button
  className="hk-button--tertiary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/tertiary small-disabled-normal 1`] = `
<button
  className="hk-button-sm--disabled-tertiary"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/tertiary small-enabled-normal 1`] = `
<button
  className="hk-button-sm--tertiary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/warning regular-disabled-async 1`] = `
<button
  className="hk-button--async"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/warning regular-disabled-normal 1`] = `
<button
  className="hk-button--disabled-warning"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/warning regular-enabled-normal 1`] = `
<button
  className="hk-button--warning"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/warning small-disabled-normal 1`] = `
<button
  className="hk-button-sm--disabled-warning"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/warning small-enabled-normal 1`] = `
<button
  className="hk-button-sm--warning"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKLineChart default 1`] = `
<div
  className="flex"
>
  <div
    className="flex-auto"
  >
    <div>
      <svg
        className="br0 ba b--silver overflow-hidden"
        height={300}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        preserveAspectRatio="none"
        viewBox="0 0 100 300"
        width={100}
      >
        <g
          transform="translate(0, 15)"
        >
          <g>
            <path
              d="M0,255.25823538044855L0,255.43188216301317L2.3759899805875913,255.43188216301317L2.3759899805875913,255.83241050819868L99.9657101368713,255.83241050819868L99.9657101368713,254.8792544462382L100,254.8792544462382"
              fill="none"
              stroke="#79589f"
              strokeWidth="1"
            />
            <path
              d="M0,255.25823538044855L0,255.43188216301317L2.3759899805875913,255.43188216301317L2.3759899805875913,255.83241050819868L99.9657101368713,255.83241050819868L99.9657101368713,254.8792544462382L100,254.8792544462382L100,285L99.9657101368713,285L99.9657101368713,285L2.3759899805875913,285L2.3759899805875913,285L0,285L0,285Z"
              fill="#79589f"
              fillOpacity="0.2"
            />
          </g>
          <g>
            <path
              d="M0,133.2821443342984L0,128.30595989379728L2.3759899805875913,128.30595989379728L2.3759899805875913,128.6925457965871L99.9657101368713,128.6925457965871L99.9657101368713,0L100,0"
              fill="none"
              stroke="#79589f"
              strokeWidth="1"
            />
            <path
              d="M0,133.2821443342984L0,128.30595989379728L2.3759899805875913,128.30595989379728L2.3759899805875913,128.6925457965871L99.9657101368713,128.6925457965871L99.9657101368713,0L100,0L100,285L99.9657101368713,285L99.9657101368713,285L2.3759899805875913,285L2.3759899805875913,285L0,285L0,285Z"
              fill="#79589f"
              fillOpacity="0.2"
            />
          </g>
          <g>
            <path
              d="M0,253.2033094955371L0,210.74286867420048L2.3759899805875913,210.74286867420048L2.3759899805875913,273.930334485197L99.9657101368713,273.930334485197L99.9657101368713,281.8312630918867L100,281.8312630918867"
              fill="none"
              stroke="#79589f"
              strokeWidth="1"
            />
            <path
              d="M0,253.2033094955371L0,210.74286867420048L2.3759899805875913,210.74286867420048L2.3759899805875913,273.930334485197L99.9657101368713,273.930334485197L99.9657101368713,281.8312630918867L100,281.8312630918867L100,285L99.9657101368713,285L99.9657101368713,285L2.3759899805875913,285L2.3759899805875913,285L0,285L0,285Z"
              fill="#79589f"
              fillOpacity="0.2"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    className="w6"
  >
    <a
      className="cursor-hand"
      onClick={[Function]}
    >
      <div
        className="hk-label flex flex-row br2 pa2 mh2 items-center bg-lightest-silver"
      >
        <div
          className="flex items-center"
        >
          <svg
            className="malibu-fill-gradient-dark-gray icon malibu-icon h1 w1 mr1 fill-dark-gray di"
            style={undefined}
          >
            <use
              xlinkHref="#confirm-16"
            />
          </svg>
          <svg
            className="mr1"
            height="31"
            viewBox="0 0 7 31"
            width="7"
          >
            <rect
              fill="#79589f"
              fillOpacity={0.2}
              height="100%"
              width="7"
              x="0"
              y="0"
            />
          </svg>
        </div>
        <div
          className="items-center"
        >
          <span
            className="db ma1 ttu f7 tracked"
          >
            dragonfruit
          </span>
          <span
            className="db ma1 ttu b f6"
          >
            95056
          </span>
        </div>
      </div>
    </a>
    <a
      className="cursor-hand"
      onClick={[Function]}
    >
      <div
        className="hk-label flex flex-row br2 pa2 mh2 items-center bg-lightest-silver"
      >
        <div
          className="flex items-center"
        >
          <svg
            className="malibu-fill-gradient-dark-gray icon malibu-icon h1 w1 mr1 fill-dark-gray di"
            style={undefined}
          >
            <use
              xlinkHref="#confirm-16"
            />
          </svg>
          <svg
            className="mr1"
            height="31"
            viewBox="0 0 7 31"
            width="7"
          >
            <rect
              fill="#79589f"
              fillOpacity={0.4}
              height="100%"
              width="7"
              x="0"
              y="0"
            />
          </svg>
        </div>
        <div
          className="items-center"
        >
          <span
            className="db ma1 ttu f7 tracked"
          >
            mango
          </span>
          <span
            className="db ma1 ttu b f6"
          >
            899412
          </span>
        </div>
      </div>
    </a>
    <a
      className="cursor-hand"
      onClick={[Function]}
    >
      <div
        className="hk-label flex flex-row br2 pa2 mh2 items-center bg-lightest-silver"
      >
        <div
          className="flex items-center"
        >
          <svg
            className="malibu-fill-gradient-dark-gray icon malibu-icon h1 w1 mr1 fill-dark-gray di"
            style={undefined}
          >
            <use
              xlinkHref="#confirm-16"
            />
          </svg>
          <svg
            className="mr1"
            height="31"
            viewBox="0 0 7 31"
            width="7"
          >
            <rect
              fill="#79589f"
              fillOpacity={0.6000000000000001}
              height="100%"
              width="7"
              x="0"
              y="0"
            />
          </svg>
        </div>
        <div
          className="items-center"
        >
          <span
            className="db ma1 ttu f7 tracked"
          >
            nectarines
          </span>
          <span
            className="db ma1 ttu b f6"
          >
            234343
          </span>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`Storyshots HKModal default 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    show it
  </button>
</div>
`;

exports[`Storyshots HKModal default initially open 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    show it
  </button>
  <div
    className="flex flex-column items-center justify-center"
    data-modal="true"
    onClick={[Function]}
    style={
      Object {
        "background": "rgba(0, 0, 0, .2)",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "fixed",
        "right": 0,
        "top": 0,
        "transition": "background 250ms ease-in-out, opacity 250ms ease-in-out",
        "zIndex": 9999,
      }
    }
  >
    <div
      className="bg-white shadow-outer-1 relative w-100 mw7 center br1"
      style={Object {}}
    >
      <div
        className="bg-near-white dark-gray bb b--light-silver f4 flex items-center justify-center br--top br2"
      >
        <div
          className="hk-modal-header pa4 bg-near-white"
        >
          <div>
            header text
          </div>
        </div>
        <div
          className="right-1 h-100 absolute pointer"
          onClick={[Function]}
        >
          <svg
            className="malibu-fill-gradient-dark-gray icon malibu-icon h1 w1 fill-dark-gray o-50 hover-o-100 h-100 v-mid"
            style={undefined}
          >
            <use
              xlinkHref="#delete-16"
            />
          </svg>
        </div>
      </div>
      <div
        className=""
      >
        <div
          className="pa6"
        >
          with some important details here below
        </div>
      </div>
      <div
        className="bt b--light-silver w-100 pa3 tr"
      >
        <button
          className="hk-button--secondary"
          disabled={false}
          onClick={[Function]}
          title={undefined}
          type="button"
          value={undefined}
        >
           
          Submit
           
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots HKModal flyout 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    show it
  </button>
</div>
`;

exports[`Storyshots HKModal flyout initially open 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    show it
  </button>
  <div
    className="flex flex-column"
    data-modal="true"
    onClick={[Function]}
    style={
      Object {
        "background": "rgba(0, 0, 0, .2)",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "fixed",
        "right": 0,
        "top": 0,
        "transition": "background 250ms ease-in-out, opacity 250ms ease-in-out",
        "zIndex": 9999,
      }
    }
  >
    <div
      className="bg-white shadow-outer-1 relative fixed right-0 w7 h-100 flex flex-column"
      style={
        Object {
          "transform": "translateX(0)",
          "transition": "transform 250ms ease-in-out",
        }
      }
    >
      <div
        className="bg-near-white dark-gray bb b--light-silver f4 flex items-center justify-center br--top br2"
      >
        <div
          className="hk-modal-header pa4 bg-near-white"
        >
          <div>
            header text
          </div>
        </div>
        <div
          className="right-1 h-100 absolute pointer"
          onClick={[Function]}
        >
          <svg
            className="malibu-fill-gradient-dark-gray icon malibu-icon h1 w1 fill-dark-gray o-50 hover-o-100 h-100 v-mid"
            style={undefined}
          >
            <use
              xlinkHref="#delete-16"
            />
          </svg>
        </div>
      </div>
      <div
        className="flex-auto"
      >
        <div
          className="pa6"
        >
          with some important details here below
        </div>
      </div>
      <div
        className="bt b--light-silver w-100 pa3 tr"
      >
        <button
          className="hk-button--secondary"
          disabled={false}
          onClick={[Function]}
          title={undefined}
          type="button"
          value={undefined}
        >
           
          Submit
           
        </button>
      </div>
    </div>
  </div>
</div>
`;
